# maths_parser

./: .gitignore  README.md  pyproject.toml
python/: pyproject.toml
python/src/maths_parser_detroix23/: __init__.py
python/src/maths_parser_detroix23.egg-info/: top_level.txt
python/src/maths_parser_detroix23/parsing/: __init__.py  builder.py  split.py
python/src/maths_parser_detroix23/structures/: __init__.py  defaults.py  operations.py  operators.py  types.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
src/maths_parser_detroix23/: __init__.py  __main__.py
src/maths_parser_detroix23.egg-info/: PKG-INFO  SOURCES.txt
src/maths_parser_detroix23/parsing/: builder.py  parenthesis.py  tokens.py
src/maths_parser_detroix23/structures/: operations.py  operators.py  tokens.py  types.py
