[project]
name = "maths_parser_detroix23"
version = "0.0.1"
description = "Python mathematics parser."
authors = [
    { name="Detroix23", email="detroix23@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.14"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Natural Language :: English",
]
dependencies = []

license = "CC-BY-4.0"
license-files = ["LICENSE.md"]

[project.urls]
Repository = "https://github.com/Detroix23/maths_parser_py"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
